Removed negative letter spacing for all Header tags to address complaints of "crunched-up" text and legibility issues.
Italicized genus-species names in articles

Added new div.intro style for static pages to allow for more flexibility in styling elements other than the first paragraph.


git-svn-id: http://svn.topazproject.org/svn/branches/0.8.2@4198 48088309-b40f-0410-b149-b14953253675

--- a/plos/webapp/src/main/webapp/css/pone_screen.css
+++ b/plos/webapp/src/main/webapp/css/pone_screen.css
@@ -1,10 +1,7 @@
 /* 	-------------------------------------------------------------
 
 	GLOBAL STYLE SHEET FOR : www.plosone.org
-	
 	CREATED ON  : 08-26-2006
-	MODIFIED ON : 08-14-2007
-	
 	CREATED BY	: MARGARET SHEAR
 	MODIFIED BY	: SEBASTIAN TOOMEY
 
@@ -43,7 +40,7 @@ table		{ margin: 20px; border: none;}
 th			{ padding: 6px; background-color: #ACF1FF; border: 4px solid #FFF; border-width: 0 3px 3px 0; font-weight: bold;}
 td			{ padding: 6px; background-color: #D2F7FF; border: 4px solid #FFF; border-width: 0 3px 3px 0; }
 /* Default Headings */
-h1, h2, h3	{ font-family: Georgia, "Times New Roman", Times, serif; letter-spacing: -.04em; color: #333; /*position: relative; Note: this was causing links in floated articleMenu to be covered up and unclickable in Firefox2 */ }
+h1, h2, h3	{ font-family: Georgia, "Times New Roman", Times, serif; color: #333; /*position: relative; Note: this was causing links in floated articleMenu to be covered up and unclickable in Firefox2 */ }
 h1			{ font-size: 2.2em; font-weight: normal; color: #004B70;}
 h2			{ font-size: 1.6em; font-weight: normal; border-bottom: 1px solid #ccc; padding: 2px 0;}
 h3			{ font-size: 1.4em; font-weight: normal; margin: .8em 0; }
@@ -358,9 +355,10 @@ div.contributions { font-size: .9em; }
 div.articleinfo p,
 div.abstract p	{ margin: 0 0 1em 0; }
 div.abstract h2 { font-size: 1.6em; font-style: normal; margin: 20px 0 0 0; border-bottom: 1px solid #ccc; padding-bottom: 3px; }
-div.abstract h3	{ font-size: 1em; margin: 0; font-family: Verdana, Arial, Helvetica, sans-serif; font-weight: bold; letter-spacing: normal; border-bottom: none;}
+div.abstract h3	{ font-size: 1em; margin: 0; font-family: Verdana, Arial, Helvetica, sans-serif; font-weight: bold; border-bottom: none;}
 div.pullQuote	{ font-size: 2em; line-height: 1em; width: 55%; padding: 10px; float: right; letter-spacing: -.05em; font-style: italic; margin: 5px; }
 div.box			{ color: #000; padding: 10px; background-color: #D2F7FF; }
+span.genus-species { font-style:italic; }
 
 /* Menu next to article title containing download links, print link, etc. */
 div#articleMenu { float:right; width:165px!important; margin:10px 0 20px 10px; padding:0 0 12px 10px; background:#fff; }
@@ -540,7 +538,10 @@ div.horizontalTabs		{ position: relative; border-width: 0;}
 .edboard dt { font-weight: bold; display: block; float: left; padding-left: 5px; margin-top: 5px; position: relative;}
 .edboard dd { margin: 0 0 5px 0; padding: 0 5px 5px 5px; background-color: #D2F7FF; border-top: 6px solid #D2F7FF; font-size: .85em; text-indent: 10px; }
 
-.static p.intro					{ border: 2px solid #ccc; padding: 10px; background: url(../images/pone_toolbar_bg.gif) repeat-x bottom; color: #000;}
+.static p.intro,
+.static div.intro
+{ border: 2px solid #ccc; padding: 10px; background: url(../images/pone_toolbar_bg.gif) repeat-x bottom; color: #000;}
+.static div.intro { margin:10px 0; padding-top:0 }
 
 /* ------ Search Styles ----*/
 
